# merging-discounting-demand

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: analysis_plan.md  derivation.md
experiment/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
experiment/src/: config.ts  main.ts
experiment/src/lib/: dataExport.ts  qualityChecks.ts  randomization.ts  titration.ts
experiment/src/tasks/: calibration.ts  consent.ts  effortDiscounting.ts  effortPurchaseTask.ts  purchaseTask.ts
experiment/tests/: calibration.test.ts  e2e.test.ts  qualityChecks.test.ts  randomization.test.ts  setup.ts  titration.test.ts
notebooks/: 01_demand_models.ipynb  02_discounting_models.ipynb  03_unified_derivation.ipynb  04_simulation_recovery.ipynb  05_pilot_analysis.ipynb
scripts/: fit_pilot.py  make_figures.py  run_simulation.py
src/edu/: __init__.py
src/edu/analysis/: __init__.py  group.py  individual.py  load_pilot.py
src/edu/fitting/: __init__.py  bayesian.py
src/edu/models/: __init__.py  _base.py  demand.py  discounting.py  unified.py
src/edu/simulation/: __init__.py  crossover.py  generate.py  identifiability.py  linkage.py  recovery.py
tests/: conftest.py  test_analysis.py  test_bayesian.py  test_demand.py  test_discounting.py  test_recovery.py  test_unified.py
